<resources>
    <string name="app_name">TimesTables</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="question">question</string>
    <string name="answer">answer</string>
    <string name="logo_for_application">logo for application</string>
    <string name="c">C</string>
    <string name="skip">skip</string>
    <string name="_0">0</string>
    <string name="try_again"> Try again </string>
    <string name="main_menu"> Main menu </string>
</resources>
