<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/TryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:background="@drawable/my_button_bg"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/try_again"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:layout_below="@+id/result"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/MainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/my_button_bg"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/main_menu"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:layout_below="@+id/TryAgain"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:text="@string/question"
        android:textColor="#00FF00"
        android:textSize="75sp"
        android:background="#000000"/>

</RelativeLayout>