<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.patrick.timestables.MainMenu">


    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/logo_for_application"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/icon"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:gravity="bottom"
        android:layout_below="@+id/imageView">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <Button
            android:id="@+id/EasyMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/my_button_bg"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/easy"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <Button
            android:id="@+id/MediumMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/my_button_bg"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/medium"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </View>

        <Button
            android:id="@+id/HardMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/my_button_bg"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/hard"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</RelativeLayout>
